--- a/Homework/Hw1/index.html
+++ b/Homework/Hw1/index.html
@@ -6,24 +6,38 @@
 
   <body>
     <h1><b>Video Games</b></h1>
-    <img
-         scr="WebDev/Homework/Hw1/img/radahorse.png"
-         class="my-picture"
-    />
     <ul>
+      <img 
+          scr="WebDev/Homework/Hw1/img/radahorse.png" 
+          width="200"
+          height="200"
+      />
       <li>Games can be stress free zones! You can explore open worlds with many possiblities to encounter just like in the photo taken
           from Elden Ring above. It can provide challenges to work on that can improve insight on situations. Games have influenced many
           lives in modern society where it can be a job to videogame test or create them.
       </li>
+      
+      <img 
+          scr="WebDev/Homework/Hw1/img/radahorse.png" 
+          width="200"
+          height="200"
+      />
       <li>Games can make you productive! Do you have assignments you have to do but just can't stop playing games? Well no problem! Solo
           que in games such as Overwatch Comp can get you to do homework in no time! How? Simply play the character Zen and lose 13 games in a
           row having more heals AND more damage than your teammates, then question what are you doing with you life. This will get you motivated
           to be more successful towards those who do not touch grass!
       </li>
+      
+      <img 
+          scr="WebDev/Homework/Hw1/img/radahorse.png" 
+          width="200"
+          height="200"
+      />
       <li>Games can make you do things you cannot in real life! Do you wish to fly someday? Well, with new devices, such as vr headsets, you can 
           virtually feel the thrill. Better yet, you can race your dream car in a game like Forza Motorsport. Maybe even use magic in a game like 
           Elden Ring to defeat a boss that killed you 73 times (from becoming a star with their little horse and smashing into you)! The outcomes
           endless with games!
+      </li>
     </ul>
   </body>
 </html>
